--- a/pages.html
+++ b/pages.html
@@ -11,3 +11,7 @@ group: navigation
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
 </ul>
+     <script type='text/javascript'>
+        (function(e,t,n){var r=document.createElement("a");var i=document.createTextNode("Take test");r.setAttribute("href","http://matt.lvh.me:3000/l/test");r.className="thinkific-button";r.appendChild(i);e.body.appendChild(r);if(!e.getElementById(n)){var s=e.createElement(t);s.id=n;s.src="http://localhost:3000/assets/widgets.js";e.head.appendChild(s)}})(document,"script","thinkific-widget");
+      </script>
+
